# fundus-recommend

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.frontend  Dockerfile.scheduler  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_article_views.py  003_add_crawl_diagnostics.py  004_add_article_body_storage_columns.py  005_make_article_body_nullable.py
docs/: operations.md
frontend/: Dockerfile  package-lock.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/recommendations/: page.tsx
frontend/app/search/: page.tsx
frontend/components/: ArticleCard.tsx  ArticleCluster.tsx  ArticleGrid.tsx  CategoryTabs.tsx  Navbar.tsx  Pagination.tsx  SearchBar.tsx  StoryCard.tsx
frontend/lib/: api.ts  article-utils.ts
scripts/: start-api.sh  start-scheduler-once.sh
src/fundus_recommend/: config.py  main.py
src/fundus_recommend/api/: articles.py  preferences.py  recommendations.py  search.py
src/fundus_recommend/cli/: classify.py  crawl.py  embed.py  fix_dates.py  migrate_bodies.py  schedule.py
src/fundus_recommend/db/: queries.py  session.py
src/fundus_recommend/ingest/: __init__.py  fetcher.py  pipeline.py  policy.py  registry.py  types.py
src/fundus_recommend/models/: db.py  (+1 more)
tests/: test_article_body_store.py  test_articles_api_body_storage.py  test_categorizer.py  test_classify_cli.py  test_date_resolution.py  test_dedup.py  test_fix_dates_cli.py  test_ingest_adapters.py  test_ingest_body_storage.py  test_ingest_pipeline.py  test_ingest_policy_fetcher.py  test_ingest_registry.py  test_migrate_bodies_cli.py  test_ranked_stories.py  test_recommendations_api.py  test_schedule_pipeline.py  test_story_recommendations.py
(+15 files in other folders)
